preliminary translate to Spanish

--- a/cv.sty
+++ b/cv.sty
@@ -1,13 +1,14 @@
 \ProvidesPackage{cv}
 
 \RequirePackage{tgpagella} % set the default font
-\RequirePackage[utf8]{inputenc} % For input encoding
+\RequirePackage[utf8]{inputenc} % for input encoding
 \RequirePackage[a4paper, margin=0.75in]{geometry}
 \RequirePackage[defernumbers=true]{biblatex}
 \RequirePackage[pagestyles]{titlesec} % it also loads titleps
 \RequirePackage{parskip} % avoiding indent at the begining of paragraph
 \RequirePackage{tabularx} % tabular with auto-adjusted column width
 \RequirePackage[colorlinks=true, allcolors=black]{hyperref}
+\RequirePackage{csquotes} % support for quotes depending language
 
 \titleformat{\section}{\fontfamily{phv}\large\bfseries}{}{0em}{}[\titlerule] % Section title format
 \titleformat{\subsection}{\fontfamily{phv}\normalsize\bfseries}{}{0em}{} % Subsection title format
