--- a/cv.tex
+++ b/cv.tex
@@ -16,11 +16,11 @@ ORCID: 0000-0003-0962-8550
 
 \section{Employment history}
 \begin{tabularx}{\linewidth}{lX}
-    2022 - \enskip \dots &
+    2022 - today &
     \textbf{SOCOTEC Spain} - Buildings and cities \newline
     Head of development and innovation \\
 
-    2022 - \enskip \dots &
+    2022 - today &
     \textbf{Universitat Politècnica de Catalunya (UPC)} - Barcelona School of Civil Engineering \newline
     Adjunct lecturer \\ 
 
@@ -81,7 +81,7 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 
 \section{Teaching activities}
 \begin{tabularx}{\linewidth}{lX}
-    2022 - \enskip \dots &
+    2022 - today &
     \textbf{Structural Dynamics.} Credits: 7'5. Degree: Master's degree in Structural \& Construction Engineering. UPC. \\
 
     2022 - 2022 &
@@ -89,6 +89,29 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 
     2017 - 2017 &
     \textbf{Numerical Methods.} Credits: 6. Degree: Bachelor's degree in Materials Engineering. UPC. \\
+\end{tabularx}
+
+
+\section{Participation in R+D+i projects}
+\begin{tabularx}{\linewidth}{l}
+    \parbox{\linewidth}{
+        Title: (2021 SGR 01349) Mecànica de Medis Continus i Estructures\\
+        Financing entity: AGAUR. Agència de Gestió d'Ajuts Universitaris i de Recerca\\
+        From: 01/01/2022 To: 30/06/2025\\
+        PI: Cervera Ruiz, Luis Miguel
+    }\\[2.5em]
+    \parbox{\linewidth}{
+        Title: (DPI2015-67857-R) Proyectos de I+D: Retos de la Sociedad 2015\\
+        Financing entity: MINECO\\
+        From: 01/01/2016 To: 31/12/2018\\
+        PI: Codina, Ramon; Baiges, Joan
+    }\\[2.5em]
+    \parbox{\linewidth}{
+        Title: (FP7- 612607) FP7-PEOPLE-2013-IRSES\\
+        Financing entity: EC\\
+        From: 01/01/2014 To: 31/12/2017\\
+        PI: Larese de Tetto, Antonia
+    }
 \end{tabularx}
 
 
