--- a/cv-es.tex
+++ b/cv-es.tex
@@ -52,19 +52,27 @@ Español nativo - Catalán nativo - C1 Inglés - B1 Italiano
 
 
 \section{Resumen}
-After studying civil engineering and a period studying philosophy and theology in Rome, he began
-a doctorate in civil engineering at CIMNE. During the initial years of his doctoral studies, he combined
-research with work for social purposes at the Montseny Foundation.
+Miguel Masó Sotomayor (en adelante, el candidato) es Ingeniero de Caminos por la Universidad Politécnica de Catalunya (UPC) desde el año 2013. Tras terminar los estudios de ingeniería, estuvo un periodo de dos años en Roma, realizando estudios de Filosofía y Teología en la Universidad Ponitificia de la Santa Cruz. Después de su regreso a Barcelona, comenzó un doctorado en Ingeniería Civil en CIMNE empezando el año 2017 y a tiempo parcial. Durante esos años, combinó la academia con actividades de propósito social en la Fundación Montseny. Más adelante, el 2019 obtuvo una beca de Formación de Personal Investigador (FPI) y cambió la dedicación a tiempo completo. Defendió la tesis en septiembre de 2022.
 
-Durign the research period at CIMNE, he worked on the stabilization of finite elements for the hyperbolic
-differential equations, with focus on numerical implementation, multi-physics coupling, and multi-scale
-resolution. These developments have been succesfully applied to various projects. In addition to
-the finite element stabilization, he also researched on the particle finite element method, either
-with moving mesh and fixed mesh.
+Comenzó a dar clases como profesor asociado el curso académico 2017-2018 en la asignatura de Métodos Numéricos en la Escuela de Ingeniería de Barcelona Este (EEBE). Por compatibilidad con las diversas actividades, pospuso la docencia hasta el curso 2021-2022, donde colaboró en las asignaturas de Análisis de Estructuras y de Ingeniería de Estructuras en el Máster de Ingeniería Estructural y de la Construcción. El curso 2022-2023, como profesor asociado, también impartió clases en estas asignaturas. Desde ese mismo curso, también como profesor asociado, ha impartido clases en la asignatura de Dinámica de Estructuras. La docencia, según la asignatura, ha sido en catalán, castellano o inglés. En la actualidad, sigue dando clases de Dinámica de Estructuras.
 
-Currently, he is working at the Building and Cities department of Socotec-Spain. He has participated
-in several international projects for structural design, taking on responsibilities of vibration
-assessment and plasticity. He is leading the innovation and development department.
+La temática del doctorado ha sido la estabilización de formulaciones de elementos finitos (FEM) para ecuaciones diferenciales hiperbólicas, en concreto, las ecuaciones de aguas poco profundas. Los trabajos llevados a cabo hicieron énfasis en la convergencia espacial y temporal, acoplamiento multifísico y la resolución multiescala. Adicionalmente, también exploró otras formulaciones como el método de elementos finitos de partículas (PFEM), tanto en la versión de malla fija como de malla móvil. Finalmente, estos desarrollos se emplearon para el estudio acoplado de propagación de tsunamis en bahías y lagos originados por deslizamientos de ladera. Esta investigación se publicó en cuatro artículos en revistas indexadas y hay otro artículo enviado.
+
+Implementó las formulaciones investigadas en el software de elementos finitos KratosMultiphysics, un proyecto \emph{open-source} escrito en los lenguajes de programación C++ y Python. Fue miembro del comité de implemtnación de dicho proyecto.
+
+Desde octubre de 2022 trabaja en el departamento de proyectos de estructuras en el área de edificación de SOCOTEC. Es ingeniero especialista y responsable de innovación y desarrollo. Durante este tiempo ha participado en diversos proyectos de ingeniería de viento y fuego. Los principales proyectos de viento has estado orientados al cálculo de presiones estáticas y dinámicas del viento en estructuras. Los proyectos de fuego, orientados a la caracterización de acciones térmicas y resistencia estructural, considerando la degradación elástica y plástica de los materiales, tanto para situaciones de proyecto, como estudios forenses. Los conocimientos de mecánica computacional también han sido de interés para el análisis y rehabilitación de edificios históricos como el Monasterio de Pedralbes, ante la situación de fisuración. Por otro lado, los conocimientos de dinámica estructural han sido de interés para el análisis de vibraciones en diversos proyectos, tanto de pasarelas, hospitales y salas de conciertos de gran aforo con acción coordinada. Contiúa dando clases de dicha asignatura. Todo ello bajo la aplicación de Eurocódigo para España o siguiendo \emph{British Standard}, según las normativas americanas AISC, ASCE y ACI, o el código saudí SBC.
+
+
+
+% Durante el período de investigación en el CIMNE, trabajó en la estabilización de elementos finitos para ecuaciones diferenciales hiperbólicas, centrándose en la implementación numérica, el acoplamiento multifísico y la resolución multiescala. Estos desarrollos se han aplicado con éxito en diversos proyectos. Además de la estabilización de elementos finitos, también investigó el método de elementos finitos con partículas, tanto con malla móvil como fija.
+
+% Actualmente, trabaja en el departamento de Edificación y Ciudades de Socotec-España. Ha participado en varios proyectos internacionales de diseño estructural, asumiendo responsabilidades en la evaluación de vibraciones y plasticidad. Lidera el departamento de innovación y desarrollo.
+
+% After studying civil engineering and a period studying philosophy and theology in Rome, he began a doctorate in civil engineering at CIMNE. During the initial years of his doctoral studies, he combined research with work for social purposes at the Montseny Foundation.
+
+% Durign the research period at CIMNE, he worked on the stabilization of finite elements for the hyperbolic differential equations, with focus on numerical implementation, multi-physics coupling, and multi-scale resolution. These developments have been succesfully applied to various projects. In addition to the finite element stabilization, he also researched on the particle finite element method, either with moving mesh and fixed mesh.
+
+% Currently, he is working at the Building and Cities department of Socotec-Spain. He has participated in several international projects for structural design, taking on responsibilities of vibration assessment and plasticity. He is leading the innovation and development department.
 
 
 \section{Publicaciones}
