--- a/cv-es.tex
+++ b/cv-es.tex
@@ -52,17 +52,19 @@ Español nativo - Catalán nativo - C1 Inglés - B1 Italiano
 
 
 \section{Resumen}
-Miguel Masó Sotomayor (en adelante, el candidato) es Ingeniero de Caminos por la Universidad Politécnica de Catalunya (UPC) desde el año 2013. Tras terminar los estudios de ingeniería, estuvo un periodo de dos años en Roma, realizando estudios de Filosofía y Teología en la Universidad Ponitificia de la Santa Cruz. Después de su regreso a Barcelona, comenzó un doctorado en Ingeniería Civil en CIMNE empezando el año 2017 y a tiempo parcial. Durante esos años, combinó la academia con actividades de propósito social en la Fundación Montseny. Más adelante, el 2019 obtuvo una beca de Formación de Personal Investigador (FPI) y cambió la dedicación a tiempo completo. Defendió la tesis en septiembre de 2022.
+Miguel Masó Sotomayor (en adelante, el candidato) es Ingeniero de Caminos por la Universidad Politécnica de Catalunya (UPC) desde el año 2013. Realizó el proyecto final de carrera en Enginyeria Reventós, diseñando la bocana de Port d'Ara para mejora de agitación. La tesina versó sobre la extensión de la teoría de Timoshenko para vigas laminadas. Tras terminar los estudios de ingeniería, estuvo un periodo de dos años en Roma, realizando estudios de Filosofía y Teología en la Universidad Ponitificia de la Santa Cruz. Tras su regreso a Barcelona, comenzó un doctorado en Ingeniería Civil en CIMNE, empezando el año 2017 y a tiempo parcial. Durante esos años, combinó la academia con actividades de propósito social en la Fundación Montseny. Más adelante, el 2019 obtuvo una beca de Formación de Personal Investigador (FPI) y cambió la dedicación a tiempo completo. Defendió la tesis en septiembre de 2022.
 
-Comenzó a dar clases como profesor asociado el curso académico 2017-2018 en la asignatura de Métodos Numéricos en la Escuela de Ingeniería de Barcelona Este (EEBE). Por compatibilidad con las diversas actividades, pospuso la docencia hasta el curso 2021-2022, donde colaboró en las asignaturas de Análisis de Estructuras y de Ingeniería de Estructuras en el Máster de Ingeniería Estructural y de la Construcción. El curso 2022-2023, como profesor asociado, también impartió clases en estas asignaturas. Desde ese mismo curso, también como profesor asociado, ha impartido clases en la asignatura de Dinámica de Estructuras. La docencia, según la asignatura, ha sido en catalán, castellano o inglés. En la actualidad, sigue dando clases de Dinámica de Estructuras.
+Ha impartido clases en cinco cursos académicos. Comenzó como profesor asociado el curso académico 2017-2018 en la asignatura de Métodos Numéricos en la Escuela de Ingeniería de Barcelona Este (EEBE). Por compatibilidad con las diversas actividades, pospuso la docencia hasta el curso 2021-2022, donde colaboró en las asignaturas de Análisis de Estructuras y de Ingeniería de Estructuras en el Máster de Ingeniería Estructural y de la Construcción. El curso 2022-2023, como profesor asociado, también impartió clases en estas asignaturas. Desde ese mismo curso, también como profesor asociado, ha impartido clases en la asignatura de Dinámica de Estructuras. La docencia, según la asignatura, ha sido en catalán, castellano o inglés. En la actualidad, sigue dando clases de Dinámica de Estructuras.
 
-La temática del doctorado ha sido la estabilización de formulaciones de elementos finitos (FEM) para ecuaciones diferenciales hiperbólicas, en concreto, las ecuaciones de aguas poco profundas. Los trabajos llevados a cabo hicieron énfasis en la convergencia espacial y temporal, acoplamiento multifísico y la resolución multiescala. Adicionalmente, también exploró otras formulaciones como el método de elementos finitos de partículas (PFEM), tanto en la versión de malla fija como de malla móvil. Finalmente, estos desarrollos se emplearon para el estudio acoplado de propagación de tsunamis en bahías y lagos originados por deslizamientos de ladera. Esta investigación se publicó en cuatro artículos en revistas indexadas y hay otro artículo enviado.
+La temática del doctorado ha sido la estabilización de formulaciones de elementos finitos (FEM) para ecuaciones diferenciales hiperbólicas, en concreto, las ecuaciones de aguas poco profundas. Los trabajos llevados a cabo hicieron énfasis en la convergencia espacial y temporal, acoplamiento multifísico y la resolución multiescala. Encontró aplicación en el proyecto PiPlates, como motor de cálculo para la predicción de concentración de óxidos de nitrógeno en ambientes urbanos. Adicionalmente, también exploró otras formulaciones como el método de elementos finitos de partículas (PFEM), tanto en la versión de malla fija como de malla móvil. Estos desarrollos se emplearon para el estudio acoplado de propagación de tsunamis en bahías y lagos originados por deslizamientos de ladera. Estas investigaciones se publicaron en cuatro artículos en revistas indexadas, además de otro artículo en curso. También presentó las investigaciones en diversos congresos.
 
-Implementó las formulaciones investigadas en el software de elementos finitos KratosMultiphysics, un proyecto \emph{open-source} escrito en los lenguajes de programación C++ y Python. Fue miembro del comité de implemtnación de dicho proyecto.
+Implementó las formulaciones investigadas en el software de elementos finitos KratosMultiphysics, un proyecto \emph{open-source} escrito en los lenguajes de programación C++ y Python. Fue miembro del comité de implementación de dicho proyecto. Esta fue una oportunidad para colaborar con miembros de \emph{Chair of Structural Analysis} de \emph{Technical University of Munich} (TUM) sobre amortiguadores de masa líquidos, aplicando conocimientos de la tesis.
 
-Desde octubre de 2022 trabaja en el departamento de proyectos de estructuras en el área de edificación de SOCOTEC. Es ingeniero especialista y responsable de innovación y desarrollo. Durante este tiempo ha participado en diversos proyectos de ingeniería de viento y fuego. Los principales proyectos de viento has estado orientados al cálculo de presiones estáticas y dinámicas del viento en estructuras. Los proyectos de fuego, orientados a la caracterización de acciones térmicas y resistencia estructural, considerando la degradación elástica y plástica de los materiales, tanto para situaciones de proyecto, como estudios forenses. Los conocimientos de mecánica computacional también han sido de interés para el análisis y rehabilitación de edificios históricos como el Monasterio de Pedralbes, ante la situación de fisuración. Por otro lado, los conocimientos de dinámica estructural han sido de interés para el análisis de vibraciones en diversos proyectos, tanto de pasarelas, hospitales y salas de conciertos de gran aforo con acción coordinada. Contiúa dando clases de dicha asignatura. Todo ello bajo la aplicación de Eurocódigo para España o siguiendo \emph{British Standard}, según las normativas americanas AISC, ASCE y ACI, o el código saudí SBC.
+Desde octubre de 2022 trabaja en el departamento de proyectos de estructuras en el área de edificación de SOCOTEC. Es ingeniero especialista y responsable de innovación y desarrollo. Durante este tiempo ha participado en diversos proyectos de ingeniería de viento y fuego. Los principales proyectos de viento han estado orientados al cálculo de presiones estáticas y dinámicas del viento en estructuras. Los proyectos de fuego, orientados a la caracterización de acciones térmicas y resistencia estructural, considerando la degradación elástica y plástica de los materiales, tanto para situaciones de proyecto, como estudios forenses. Los conocimientos de mecánica computacional han sido de interés para el análisis y rehabilitación de edificios históricos como el Monasterio de Pedralbes, ante la situación de fisuración. Por otro lado, los conocimientos de dinámica estructural han sido de interés para el análisis de vibraciones en diversos proyectos, tanto de pasarelas, hospitales y salas de conciertos de gran aforo con acción coordinada. Contiúa dando clases de dicha asignatura. Todo ello bajo la aplicación de Eurocódigo para España o siguiendo \emph{British Standard}, según las normativas americanas AISC, ASCE y ACI, o el código saudí SBC.
 
+Durante este periodo en la empresa, también ha manifestado interés por las metodologías para cuantificar los impactos ambientales y sostenibilidad de las estructuras. Esto se ha manifestado en la participación en la comisión de sostenibilidad de la Asociación de Consultores de Estructuras (ACE), certificación ENVISION e impartición de cursos.
 
+Estando en la empresa ha dirigido y codirigido diversos trabajos finales de grado y máster. Uno sobre la interacción fluido estructura (FSI) para analizar la dinámica de una cubierta de estadio de fútbol bajo la acción del viento. Otro sobre el comportamiento no lineal del hormigón armado ante solicitaciones reológicas, empleando para ello formulaciones de mezcla serie-paralelo y leyes constitutivas de plasticidad. En el ámbito de la sostenibilidad, un estudio comparativo de emisiones de CO\textsubscript{2}, combinado con un estudio estadístico para analizar la sensitividad a múltiples parámetros de diseño. Actualmente, dirige otro trabajo final de grado sobre dispositivos microfluídicos de separación y clasificación de partículas.
 
 % Durante el período de investigación en el CIMNE, trabajó en la estabilización de elementos finitos para ecuaciones diferenciales hiperbólicas, centrándose en la implementación numérica, el acoplamiento multifísico y la resolución multiescala. Estos desarrollos se han aplicado con éxito en diversos proyectos. Además de la estabilización de elementos finitos, también investigó el método de elementos finitos con partículas, tanto con malla móvil como fija.
 
