--- a/cv-es.tex
+++ b/cv-es.tex
@@ -19,7 +19,7 @@ ORCID: 0000-0003-0962-8550
 \begin{tabularx}{\linewidth}{lX}
     2022 - actual &
     \textbf{SOCOTEC Spain} - Estructuras \newline
-    Specialist Engineer, Head of research and development \\
+    Ingeniero Especialista, Responsable de innovación y desarrollo \\
 
     2022 - actual &
     \textbf{Universitat Politècnica de Catalunya (UPC)} - Escuela Técnica Superior de Ingeniería de Caminos, Canales y Puertos de Barcelona \newline
