--- a/cv.sty
+++ b/cv.sty
@@ -2,6 +2,7 @@
 
 \RequirePackage{tgpagella} % set the default font
 \RequirePackage[utf8]{inputenc} % for input encoding
+\RequirePackage[T1]{fontenc} % font output encoding
 \RequirePackage[a4paper, margin=0.75in]{geometry}
 \RequirePackage[defernumbers=true]{biblatex}
 \RequirePackage[pagestyles]{titlesec} % it also loads titleps
