--- a/cv.bib
+++ b/cv.bib
@@ -85,5 +85,5 @@
   title    = {One-way coupled Eulerian-Lagrangian strategy for waves propagation and impact on coastal areas},
   year     = {2024},
   journal  = {Ocean Engineering},
-  pubstate = {[\emph{In preparation}]},
+  pubstate = {[\emph{Under review}]},
 }
