--- a/cv.bib
+++ b/cv.bib
@@ -80,10 +80,15 @@
   timestamp = {2022.10.13}
 }
 
-@article{montanino2024,
-  author   = {Montanino, A. and Masó, M. and Franci, A.},
-  title    = {One-way coupled Eulerian-Lagrangian strategy for waves propagation and impact on coastal areas},
-  year     = {2024},
-  journal  = {Ocean Engineering},
-  pubstate = {[\emph{Under review}]},
+@article{montanino2025,
+title = {One-way coupled Eulerian–Lagrangian strategy for wave propagation and impact on coastal areas},
+journal = {Communications in Nonlinear Science and Numerical Simulation},
+volume = {147},
+pages = {108845},
+year = {2025},
+issn = {1007-5704},
+doi = {https://doi.org/10.1016/j.cnsns.2025.108845},
+url = {https://www.sciencedirect.com/science/article/pii/S1007570425002564},
+author = {Andrea Montanino and Miguel Masó Sotomayor and Alessandro Franci},
+keywords = {PFEM, Boussinesq, Shallow-water, One-way coupling, Wave impact, Risk assessment},
 }
