--- a/cv.sty
+++ b/cv.sty
@@ -4,7 +4,7 @@
 \RequirePackage[utf8]{inputenc} % for input encoding
 \RequirePackage[T1]{fontenc} % font output encoding
 \RequirePackage[a4paper, margin=0.75in]{geometry}
-\RequirePackage[defernumbers=true]{biblatex}
+\RequirePackage[defernumbers=true,sorting=ydnt]{biblatex}
 \RequirePackage[pagestyles]{titlesec} % it also loads titleps
 \RequirePackage{parskip} % avoiding indent at the begining of paragraph
 \RequirePackage{tabularx} % tabular with auto-adjusted column width
