--- a/cv.tex
+++ b/cv.tex
@@ -18,7 +18,7 @@ ORCID: 0000-0003-0962-8550
 \begin{tabularx}{\linewidth}{lX}
     2022 - today &
     \textbf{SOCOTEC Spain} - Buildings and cities \newline
-    Head of development and innovation \\
+    Specialist Engineer, Head of development and innovation \\
 
     2022 - today &
     \textbf{Universitat Politècnica de Catalunya (UPC)} - Barcelona School of Civil Engineering \newline
