--- a/cv-es.tex
+++ b/cv-es.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt]{article}
 
-\usepackage{cv}
 \usepackage[spanish]{babel}
+\usepackage{cv}
 
 \addbibresource{cv.bib}
 
@@ -105,29 +105,7 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 \end{tabularx}
 
 
-\section{Participación en proyctos de I+D+i}
-\begin{tabularx}{\linewidth}{l}
-    \parbox{\linewidth}{
-        Título: (2021 SGR 01349) Mecànica de Medis Continus i Estructures \\
-        Entidad financiadora: AGAUR. Agència de Gestió d'Ajuts Universitaris i de Recerca \\
-        Desde: 01/01/2022 Hasta: 30/06/2025 \\
-        IP: Cervera Ruiz, Luis Miguel
-    } \\ [2.5em]
-
-    \parbox{\linewidth}{
-        Título: (DPI2015-67857-R) Proyectos de I+D: Retos de la Sociedad 2015 \\
-        Entidad financiadora: MINECO \\
-        Desde: 01/01/2016 Hasta: 31/12/2018 \\
-        IP: Codina, Ramon; Baiges, Joan
-    } \\ [2.5em]
-
-    \parbox{\linewidth}{
-        Título: (FP7- 612607) FP7-PEOPLE-2013-IRSES \\
-        Entidad financiadora: EC \\
-        Desde: 01/01/2014 Hasta: 31/12/2017 \\
-        IP: Larese de Tetto, Antonia
-    }
-\end{tabularx}
+\printbibliography[heading={bibintoc}, title={Participación en proyctos de I+D+i}, type=project]
 
 
 \section{Divulgación}
