--- a/cv.tex
+++ b/cv.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{article}
 
+\usepackage[english]{babel}
 \usepackage{cv}
 
 \addbibresource{cv.bib}
@@ -92,27 +93,7 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 \end{tabularx}
 
 
-\section{Participation in R+D+i projects}
-\begin{tabularx}{\linewidth}{l}
-    \parbox{\linewidth}{
-        Title: (2021 SGR 01349) Mecànica de Medis Continus i Estructures\\
-        Financing entity: AGAUR. Agència de Gestió d'Ajuts Universitaris i de Recerca\\
-        From: 01/01/2022 To: 30/06/2025\\
-        PI: Cervera Ruiz, Luis Miguel
-    }\\[2.5em]
-    \parbox{\linewidth}{
-        Title: (DPI2015-67857-R) Proyectos de I+D: Retos de la Sociedad 2015\\
-        Financing entity: MINECO\\
-        From: 01/01/2016 To: 31/12/2018\\
-        PI: Codina, Ramon; Baiges, Joan
-    }\\[2.5em]
-    \parbox{\linewidth}{
-        Title: (FP7- 612607) FP7-PEOPLE-2013-IRSES\\
-        Financing entity: EC\\
-        From: 01/01/2014 To: 31/12/2017\\
-        PI: Larese de Tetto, Antonia
-    }
-\end{tabularx}
+\printbibliography[heading={bibintoc}, title={Participation in R+D+i projects}, type=project]
 
 
 \section{Miscellaneous}
