update employment history

--- a/cv.tex
+++ b/cv.tex
@@ -17,13 +17,17 @@ ORCID: 0000-0003-0962-8550
 
 \section{Employment history}
 \begin{tabularx}{\linewidth}{lX}
-    2022 - today &
-    \textbf{SOCOTEC Spain} - Buildings and cities \newline
-    Specialist Engineer, Head of development and innovation \\
+    2025 - today &
+    \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
+    Postdoctoral researcher \\
 
     2022 - today &
     \textbf{Universitat Politècnica de Catalunya (UPC)} - Barcelona School of Civil Engineering \newline
     Adjunct lecturer \\ 
+
+    2022 - 2025 &
+    \textbf{SOCOTEC Spain} - Buildings and cities \newline
+    Specialist Engineer, Head of development and innovation \\
 
     2017 - 2022 &
     \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
@@ -62,9 +66,7 @@ resolution. These developments have been succesfully applied to various projects
 the finite element stabilization, he also researched on the particle finite element method, either
 with moving mesh and fixed mesh.
 
-Currently, he is working at the Building and Cities department of Socotec-Spain. He has participated
-in several international projects for structural design, taking on responsibilities of vibration
-assessment and plasticity. He is leading the innovation and development department.
+After a three-year stint in the structural engineering consultancy at SOCOTEC, he has returned to academia as a postdoctoral researcher.
 
 
 \section{Publications}
@@ -100,7 +102,7 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 \begin{itemize}
     \itemsep=-.3em
     \item \textbf{Skills:} Computational Mechanics, Fire Engineering, Ocean Engineering, Vibration Assessment
-    \item \textbf{Programming:} C++, Python, C\#, .NET
+    \item \textbf{Programming:} C++, Python, Julia, C\#, .NET, Git
     \item \textbf{Tools:} Robot Structural Analysis API, Revit API
     \item \textbf{Miscellaneous:} ENVISION SP 2023-2024
 \end{itemize}
