--- a/cv.tex
+++ b/cv.tex
@@ -66,7 +66,8 @@ resolution. These developments have been succesfully applied to various projects
 the finite element stabilization, he also researched on the particle finite element method, either
 with moving mesh and fixed mesh.
 
-After a three-year stint in the structural engineering consultancy at SOCOTEC, he has returned to academia as a postdoctoral researcher.
+After a three-year stint in the structural engineering consultancy at SOCOTEC, he has returned
+to academia as a postdoctoral researcher.
 
 
 \section{Publications}
@@ -96,6 +97,58 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 
 
 \printbibliography[heading={bibintoc}, title={Participation in R+D+i projects}, type=project]
+
+
+\section{Divulgation activities}
+\begin{tabularx}{\linewidth}{l}
+    \parbox{\linewidth}{
+        Subject: Sostenibilidad de las estructuras. Criterios para la descarbonización. \\
+        Promoting entity: Asociación de Consultores de Estructuras (ACE) \\
+        Organizing entity: Fundació Privada Institut d'Estudis Estructurals \\
+        Dates: 16/10/2024 - 13/11/2024
+    }
+\end{tabularx}
+
+
+\section{Participation in industry projects}
+\begin{tabularx}{\linewidth}{X}
+    New Velindre Cancer Centre, Cardiff (2022-2025) SACYR \newline
+    Structural design;
+    Robustness assessment against disproportional collapse;
+    Vibration assessment for isolation of medical equipment. \\
+    
+    Shushah Island Resort, Stage 3 (2022-2024) RBTA \newline
+    Structural design. \\
+
+    Étude de mode de ruine de six bâtiments industriels (2023) SOCOTEC-France \newline
+    CFD analysis of fire;
+    Structural analysis of thermo-plastic deformations. \\
+
+    Anàlisi de patologia de la cúpula de la sala capitular del monestir de Pedralbes (2023) ICUB \newline
+    Forensic analysis of crack propagation. \\
+
+    Mercury Tower, Malta (2024) Zaha Hadid \newline
+    Vibration assessment on serviceability limits for a flying theatre. \\
+
+    Proposta correctiva a la cúpula de la sala capitular del monestir de Pedralbes (2024) ICUB \newline
+    Structural design. \\
+
+    Hotel Puerto Málaga (2024) b720 \newline
+    Structural analysis;
+    Deep foundation design. \\
+
+    Bridgs on new Genome Campus, Hinxton (2025) Evolve \newline
+    Assessment on structural design. \\
+
+    Residencial Torre Garellano (2025) IDOM \newline
+    CFD Analysis of wind loads on facade. \\
+
+    BIM developments internal project (2023-2025) SOCOTEC-Spain \newline
+    Interconnectivity and automation processes of BIM modelling from calculation models. \\
+
+    BIM developments (2025) Hormipresa \newline
+    Development of an automated process of revision of assemblies lifting.
+\end{tabularx}
 
 
 \section{Miscellaneous}
