--- a/cv.tex
+++ b/cv.tex
@@ -9,29 +9,33 @@
 
 \begin{document}
 \maketitle
-\email{miguel.maso@socotec.com} \qquad +34 717 712 217 \\
-City: Barcelona (08006) \qquad
-Birth date: 9/4/1989 \qquad
-ORCID: 0000-0003-0962-8550
+\begin{tabularx}{\linewidth}{lCr}
+\email{miguel.maso@socotec.com} &
++34 717 712 217 &
+Chartered Civil Engineer, No. 36285\\[-.2em]
+City: Barcelona (08006) &
+Birth date: 9/4/1989 &
+ORCID: 0000-0003-0962-8550    
+\end{tabularx}
 
 
 \section{Employment history}
 \begin{tabularx}{\linewidth}{lX}
-    2025 - today &
+    2025 - \small{present} &
     \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
     Postdoctoral researcher \\
 
-    2022 - today &
+    2022 - \small{present} &
     \textbf{Universitat Politècnica de Catalunya (UPC)} - Barcelona School of Civil Engineering \newline
     Adjunct lecturer \\ 
 
     2022 - 2025 &
     \textbf{SOCOTEC Spain} - Buildings and cities \newline
-    Specialist Engineer, Head of development and innovation \\
+    Specialist Engineer, Head of Development and Innovation \\
 
     2017 - 2022 &
     \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
-    Doctoral student with FPI grant \\
+    PhD Candidate (FPI Fellowship) \\
 \end{tabularx}
 
 
@@ -43,16 +47,16 @@ ORCID: 0000-0003-0962-8550
 
     2013 - 2015 &
     \textbf{Bachelor's degree in Philosophy and Theology} \newline
-    Ponitificia Universtià della Santa Croce, Rome, Italy \\
+    Pontificia Universtià della Santa Croce, Rome, Italy \\
 
     2007 - 2013 &
-    \textbf{Ingeniero de Caminos, Canales y Puertos} (1st and 2nd cycle studies) \newline
+    \textbf{Ingeniero de Caminos, Canales y Puertos} (equivalent to MSc in Civil Engineering) \newline
     UPC, Barcelona, Spain \\
 \end{tabularx}
 
 
 \section{Languages}
-Native Spanish - Native Catalan - C1 English - B1 Italian
+Spanish (native) - Catalan (Native) - English (C1) - Italian (B1)
 
 
 \section{CV Summary}
@@ -60,13 +64,13 @@ After studying civil engineering and a period studying philosophy and theology i
 a doctorate in civil engineering at CIMNE. During the initial years of his doctoral studies, he combined
 research with work for social purposes at the Montseny Foundation.
 
-Durign the research period at CIMNE, he worked on the stabilization of finite elements for the hyperbolic
-differential equations, with focus on numerical implementation, multi-physics coupling, and multi-scale
-resolution. These developments have been succesfully applied to various projects. In addition to
-the finite element stabilization, he also researched on the particle finite element method, either
-with moving mesh and fixed mesh.
+During his research period at CIMNE, he worked on the stabilization of finite elements for the hyperbolic
+differential equations, focusing on numerical implementation, multi-physics coupling, and multi-scale
+resolution. These developments have been successfully applied to various projects. In addition to
+the finite element stabilization, he also researched on the particle finite element method, using both
+moving mesh and fixed meshes.
 
-After a three-year stint in the structural engineering consultancy at SOCOTEC, he has returned
+After three-year working in the structural engineering consultancy at SOCOTEC, he returned
 to academia as a postdoctoral researcher.
 
 
@@ -78,14 +82,14 @@ to academia as a postdoctoral researcher.
 
 
 \section{Stays and other activities}
-\textbf{Guest. Centro de Investigación en Matemáticas.} Purpose: Research. Comparable tasks: WP3 of project
+\textbf{Visiting researcher, Centro de Investigación en Matemáticas.} Purpose: Research. Comparable tasks: WP3 of project
 TCAiNMaND-PIRSES-GA-2013-612607 Numerical Methods for Real Time Computations Research on stabilized
 formulations the Finite Element Method applied to hyperbolic conservation laws. 18/07/2017 - 19/10/2017.
 
 
 \section{Teaching activities}
 \begin{tabularx}{\linewidth}{lX}
-    2022 - today &
+    2022 - \small{present} &
     \textbf{Structural Dynamics.} Credits: 7'5. Degree: Master's degree in Structural \& Construction Engineering. UPC. \\
 
     2022 - 2022 &
@@ -100,55 +104,62 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 
 
 \section{Divulgation activities}
-\begin{tabularx}{\linewidth}{l}
-    \parbox{\linewidth}{
-        Subject: Sostenibilidad de las estructuras. Criterios para la descarbonización. \\
-        Promoting entity: Asociación de Consultores de Estructuras (ACE) \\
-        Organizing entity: Fundació Privada Institut d'Estudis Estructurals \\
-        Dates: 16/10/2024 - 13/11/2024
-    }
-\end{tabularx}
+\parbox{\linewidth}{
+    Subject: Sostenibilidad de las estructuras. Criterios para la descarbonización. \\
+    Promoting entity: Asociación de Consultores de Estructuras (ACE) \\
+    Organizing entity: Fundació Privada Institut d'Estudis Estructurals \\
+    Dates: 16/10/2024 - 13/11/2024
+}
 
 
 \section{Participation in industry projects}
-\begin{tabularx}{\linewidth}{X}
+\parbox{\linewidth}{
     New Velindre Cancer Centre, Cardiff (2022-2025) SACYR \newline
     Structural design;
     Robustness assessment against disproportional collapse;
-    Vibration assessment for isolation of medical equipment. \\
-    
-    Shushah Island Resort, Stage 3 (2022-2024) RBTA \newline
-    Structural design. \\
+    Vibration assessment for isolation of medical equipment.}
 
+\parbox{\linewidth}{
+    Shushah Island Resort, Stage 3 (2022-2024) RBTA \newline
+    Structural design.}
+
+\parbox{\linewidth}{
     Étude de mode de ruine de six bâtiments industriels (2023) SOCOTEC-France \newline
     CFD analysis of fire;
-    Structural analysis of thermo-plastic deformations. \\
+    Structural analysis of thermo-plastic deformations.}
 
+\parbox{\linewidth}{
     Anàlisi de patologia de la cúpula de la sala capitular del monestir de Pedralbes (2023) ICUB \newline
-    Forensic analysis of crack propagation. \\
+    Forensic analysis of crack propagation.}
 
+\parbox{\linewidth}{
     Mercury Tower, Malta (2024) Zaha Hadid \newline
-    Vibration assessment on serviceability limits for a flying theatre. \\
+    Vibration assessment on serviceability limits for a flying theatre.}
 
+\parbox{\linewidth}{
     Proposta correctiva a la cúpula de la sala capitular del monestir de Pedralbes (2024) ICUB \newline
-    Structural design. \\
+    Structural design.}
 
+\parbox{\linewidth}{
     Hotel Puerto Málaga (2024) b720 \newline
     Structural analysis;
-    Deep foundation design. \\
+    Deep foundation design.}
 
-    Bridgs on new Genome Campus, Hinxton (2025) Evolve \newline
-    Assessment on structural design. \\
+\parbox{\linewidth}{
+    Bridges on new Genome Campus, Hinxton (2025) Evolve \newline
+    Revision and assessment of structural design.}
 
+\parbox{\linewidth}{
     Residencial Torre Garellano (2025) IDOM \newline
-    CFD Analysis of wind loads on facade. \\
+    CFD Analysis of wind loads on facade.}
 
+\parbox{\linewidth}{
     BIM developments internal project (2023-2025) SOCOTEC-Spain \newline
-    Interconnectivity and automation processes of BIM modelling from calculation models. \\
+    Interconnectivity and automation processes of BIM modelling from calculation models.}
 
+\parbox{\linewidth}{
     BIM developments (2025) Hormipresa \newline
-    Development of an automated process of revision of assemblies lifting.
-\end{tabularx}
+    Development of an automated process for reviewing lifting assemblies.}
 
 
 \section{Miscellaneous}
@@ -157,7 +168,7 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
     \item \textbf{Skills:} Computational Mechanics, Fire Engineering, Ocean Engineering, Vibration Assessment
     \item \textbf{Programming:} C++, Python, Julia, C\#, .NET, Git
     \item \textbf{Tools:} Robot Structural Analysis API, Revit API
-    \item \textbf{Miscellaneous:} ENVISION SP 2023-2024
+    \item \textbf{Miscellaneous:} ENVISION Sustainability Professional 2023-2024
 \end{itemize}
 
 
