--- a/cv.tex
+++ b/cv.tex
@@ -21,11 +21,11 @@ ORCID: 0000-0003-0962-8550
 
 \section{Employment history}
 \begin{tabularx}{\linewidth}{lX}
-    2025 - \small{present} &
+    2025 - \enspace \dots &
     \textbf{International Centre for Numerical Methods in Engineering (CIMNE)} \newline
     Postdoctoral researcher \\
 
-    2022 - \small{present} &
+    2022 - \enspace \dots &
     \textbf{Universitat Politècnica de Catalunya (UPC)} - Barcelona School of Civil Engineering \newline
     Adjunct lecturer \\ 
 
@@ -89,7 +89,7 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 
 \section{Teaching activities}
 \begin{tabularx}{\linewidth}{lX}
-    2022 - \small{present} &
+    2022 - \enspace \dots &
     \textbf{Structural Dynamics.} Credits: 7'5. Degree: Master's degree in Structural \& Construction Engineering. UPC. \\
 
     2022 - 2022 &
