--- a/cv.tex
+++ b/cv.tex
@@ -10,9 +10,9 @@
 \begin{document}
 \maketitle
 \begin{tabularx}{\linewidth}{lCr}
-\email{miguel.maso@socotec.com} &
+\email{miguel.maso@upc.edu} &
 +34 717 712 217 &
-Chartered Civil Engineer, No. 36285\\[-.2em]
+Chartered Civil Engineer, Nº 36285\\[-.2em]
 City: Barcelona (08006) &
 Birth date: 9/4/1989 &
 ORCID: 0000-0003-0962-8550    
