fix industry name

--- a/cv.tex
+++ b/cv.tex
@@ -150,7 +150,7 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
     Revision and assessment of structural design.}
 
 \parbox{\linewidth}{
-    Residencial Torre Garellano (2025) IDOM \newline
+    Residencial Torre Garellano (2025) Arup \newline
     CFD Analysis of wind loads on facade.}
 
 \parbox{\linewidth}{
