update on resume

--- a/cv.tex
+++ b/cv.tex
@@ -60,18 +60,17 @@ Spanish (native) - Catalan (Native) - English (C1) - Italian (B1)
 
 
 \section{CV Summary}
-After studying civil engineering and a period studying philosophy and theology in Rome, he began
+After he graduated in civil engineering and a period studying philosophy and theology in Rome, he began
 a doctorate in civil engineering at CIMNE. During the initial years of his doctoral studies, he combined
 research with work for social purposes at the Montseny Foundation.
 
-During his research period at CIMNE, he worked on the stabilization of finite elements for the hyperbolic
+During his research period at CIMNE, he worked on the stabilization of finite elements for hyperbolic
 differential equations, focusing on numerical implementation, multi-physics coupling, and multi-scale
-resolution. These developments have been successfully applied to various projects. In addition to
-the finite element stabilization, he also researched on the particle finite element method, using both
-moving mesh and fixed meshes.
+resolution. These developments have been successfully applied to various projects.
 
-After three-year working in the structural engineering consultancy at SOCOTEC, he returned
-to academia as a postdoctoral researcher.
+Working in structural engineering consultancy at SOCOTEC, he was involved in RDI projects, the Wind\&Fire
+department, and the analysis of complex structures, focusing on dynamic effects. He is now working at CIMNE
+as a postdoctoral researcher, developing formulations for Electro-Active-Polymers (EAPs).
 
 
 \section{Publications}
