--- a/cv.tex
+++ b/cv.tex
@@ -60,17 +60,24 @@ Spanish (native) - Catalan (Native) - English (C1) - Italian (B1)
 
 
 \section{CV Summary}
-After he graduated in civil engineering and a period studying philosophy and theology in Rome, he began
-a doctorate in civil engineering at CIMNE. During the initial years of his doctoral studies, he combined
-research with work for social purposes at the Montseny Foundation.
+Perfil Profesional Ingeniero de Caminos y Doctor en Mecánica Computacional con una sólida trayectoria híbrida que combina la ingeniería estructural avanzada y el desarrollo de software.
+Experto en cerrar la brecha entre la teoría numérica y la aplicación industrial, con dominio de C++, Python, .NET y APIs de BIM.
 
-During his research period at CIMNE, he worked on the stabilization of finite elements for hyperbolic
-differential equations, focusing on numerical implementation, multi-physics coupling, and multi-scale
-resolution. These developments have been successfully applied to various projects.
+Como Responsable de Desarrollo e Innovación en SOCOTEC, lideré la automatización de procesos de diseño y la interconectividad entre modelos de cálculo y BIM.
+Mi formación doctoral en métodos numéricos (FEM, interacción fluido-estructura) me permite abordar problemas complejos de simulación física desde el código fuente hasta la solución práctica.
+Actualmente investigador postdoctoral en CIMNE desarrollando formulaciones para nuevos materiales (polímeros electroactivos), busco aplicar mi capacidad técnica en entornos de desarrollo de software de ingeniería de alto nivel.
 
-Working in structural engineering consultancy at SOCOTEC, he was involved in RDI projects, the Wind\&Fire
-department, and the analysis of complex structures, focusing on dynamic effects. He is now working at CIMNE
-as a postdoctoral researcher, developing formulations for Electro-Active-Polymers (EAPs).
+% After he graduated in civil engineering and a period studying philosophy and theology in Rome, he began
+% a doctorate in civil engineering at CIMNE. During the initial years of his doctoral studies, he combined
+% research with work for social purposes at the Montseny Foundation.
+
+% During his research period at CIMNE, he worked on the stabilization of finite elements for hyperbolic
+% differential equations, focusing on numerical implementation, multi-physics coupling, and multi-scale
+% resolution. These developments have been successfully applied to various projects.
+
+% Working in structural engineering consultancy at SOCOTEC, he was involved in RDI projects, the Wind\&Fire
+% department, and the analysis of complex structures, focusing on dynamic effects. He is now working at CIMNE
+% as a postdoctoral researcher, developing formulations for Electro-Active-Polymers (EAPs).
 
 
 \section{Publications}
@@ -112,53 +119,89 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 
 
 \section{Participation in industry projects}
-\parbox{\linewidth}{
-    New Velindre Cancer Centre, Cardiff (2022-2025) SACYR \newline
-    Structural design;
-    Robustness assessment against disproportional collapse;
-    Vibration assessment for isolation of medical equipment.}
 
-\parbox{\linewidth}{
-    Shushah Island Resort, Stage 3 (2022-2024) RBTA \newline
-    Structural design.}
-
-\parbox{\linewidth}{
-    Étude de mode de ruine de six bâtiments industriels (2023) SOCOTEC-France \newline
-    CFD analysis of fire;
-    Structural analysis of thermo-plastic deformations.}
-
-\parbox{\linewidth}{
-    Anàlisi de patologia de la cúpula de la sala capitular del monestir de Pedralbes (2023) ICUB \newline
-    Forensic analysis of crack propagation.}
+\paragraph{Advanced Structural Analysis \& Complex Dynamics}
 
 \parbox{\linewidth}{
     Mercury Tower, Malta (2024) Zaha Hadid \newline
-    Vibration assessment on serviceability limits for a flying theatre.}
+    \emph{Reto}: Evaluación de dinámica estructural para una atracción de "teatro volador" (Flying Theatre) en un rascacielos de diseño singular. \newline
+    \emph{Solución}: Realicé el análisis avanzado de vibraciones para garantizar el cumplimiento de estrictos límites de servicio (SLS) y confort humano bajo cargas dinámicas.
+}
 
 \parbox{\linewidth}{
-    Proposta correctiva a la cúpula de la sala capitular del monestir de Pedralbes (2024) ICUB \newline
-    Structural design.}
+    New Velindre Cancer Centre, Cardiff (2022-2025) SACYR \newline
+    \emph{Retos}: Diseño de infraestructura crítica sanitaria con requisitos estrictos de aislamiento y seguridad ante accidentes. \newline
+    \emph{Soluciones}: Lideré los estudios de vibraciones para el aislamiento de equipos médicos de alta sensibilidad (MRI/Escáneres) asegurando la operatividad del centro y de robustez frente al colapso progresivo.
+}
+
+\paragraph{Multiphysics ans forensic analysis}
 
 \parbox{\linewidth}{
-    Hotel Puerto Málaga (2024) b720 \newline
-    Structural analysis;
-    Deep foundation design.}
+    Investigación Forense y Multifísica (Varios Proyectos) \newline
+    Análisis Termo-mecánico (2023) SOCOTEC Francia: Ejecución de simulaciones acopladas CFD-Estructural para predecir modos de ruina en naves industriales bajo cargas de fuego, modelando deformaciones termo-plásticas. \newline
+    Monasterio de Pedralbes (2024) Patrimonio: Análisis forense de patologías mediante modelado numérico de la propagación de grietas y diseño de propuestas correctivas para la estabilización de la cúpula histórica (S. XV). \newline
+    Residencial Torre Garellano (2025) Arup: Análisis CFD para la determinación de cargas de viento en fachada en edificación de gran altura.
+}
+
+\paragraph{Computational Design \& BIM Automation (R\&D)}
 
 \parbox{\linewidth}{
-    Bridges on new Genome Campus, Hinxton (2025) Evolve \newline
-    Revision and assessment of structural design.}
+    Head of Development & Innovation (2022-2025) SOCOTEC Spain \newline
+    Automatización: Desarrollo de algoritmos propios (C# / .NET / Python) para la interoperabilidad directa entre modelos de cálculo y software BIM (Revit/Robot), eliminando el retrabajo manual.
+}
 
 \parbox{\linewidth}{
-    Residencial Torre Garellano (2025) Arup \newline
-    CFD Analysis of wind loads on facade.}
+    Consultor externo (2024 - 2025) Hromipresa \newline
+    Control de Calidad: Implementación de procesos automatizados para la revisión de conjuntos de izado en prefabricados, optimizando la seguridad y reduciendo tiempos de revisión técnica.
+}
 
-\parbox{\linewidth}{
-    BIM developments internal project (2023-2025) SOCOTEC-Spain \newline
-    Interconnectivity and automation processes of BIM modelling from calculation models.}
+% \parbox{\linewidth}{
+%     New Velindre Cancer Centre, Cardiff (2022-2025) SACYR \newline
+%     Structural design;
+%     Robustness assessment against disproportional collapse;
+%     Vibration assessment for isolation of medical equipment.}
 
-\parbox{\linewidth}{
-    BIM developments (2025) Hormipresa \newline
-    Development of an automated process for reviewing lifting assemblies.}
+% \parbox{\linewidth}{
+%     Shushah Island Resort, Stage 3 (2022-2024) RBTA \newline
+%     Structural design.}
+
+% \parbox{\linewidth}{
+%     Étude de mode de ruine de six bâtiments industriels (2023) SOCOTEC-France \newline
+%     CFD analysis of fire;
+%     Structural analysis of thermo-plastic deformations.}
+
+% \parbox{\linewidth}{
+%     Anàlisi de patologia de la cúpula de la sala capitular del monestir de Pedralbes (2023) ICUB \newline
+%     Forensic analysis of crack propagation.}
+
+% \parbox{\linewidth}{
+%     Mercury Tower, Malta (2024) Zaha Hadid \newline
+%     Vibration assessment on serviceability limits for a flying theatre.}
+
+% \parbox{\linewidth}{
+%     Proposta correctiva a la cúpula de la sala capitular del monestir de Pedralbes (2024) ICUB \newline
+%     Structural design.}
+
+% \parbox{\linewidth}{
+%     Hotel Puerto Málaga (2024) b720 \newline
+%     Structural analysis;
+%     Deep foundation design.}
+
+% \parbox{\linewidth}{
+%     Bridges on new Genome Campus, Hinxton (2025) Evolve \newline
+%     Revision and assessment of structural design.}
+
+% \parbox{\linewidth}{
+%     Residencial Torre Garellano (2025) Arup \newline
+%     CFD Analysis of wind loads on facade.}
+
+% \parbox{\linewidth}{
+%     BIM developments internal project (2023-2025) SOCOTEC-Spain \newline
+%     Interconnectivity and automation processes of BIM modelling from calculation models.}
+
+% \parbox{\linewidth}{
+%     BIM developments (2025) Hormipresa \newline
+%     Development of an automated process for reviewing lifting assemblies.}
 
 
 \section{Miscellaneous}
