--- a/cv.tex
+++ b/cv.tex
@@ -120,7 +120,7 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
 
 \section{Participation in industry projects}
 
-\paragraph{Advanced Structural Analysis \& Complex Dynamics}
+\subsection{Advanced Structural Analysis \& Complex Dynamics}
 
 \parbox{\linewidth}{
     Mercury Tower, Malta (2024) Zaha Hadid \newline
@@ -134,7 +134,7 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
     \emph{Soluciones}: Lideré los estudios de vibraciones para el aislamiento de equipos médicos de alta sensibilidad (MRI/Escáneres) asegurando la operatividad del centro y de robustez frente al colapso progresivo.
 }
 
-\paragraph{Multiphysics ans forensic analysis}
+\subsection{Multiphysics ans forensic analysis}
 
 \parbox{\linewidth}{
     Investigación Forense y Multifísica (Varios Proyectos) \newline
@@ -143,15 +143,15 @@ formulations the Finite Element Method applied to hyperbolic conservation laws. 
     Residencial Torre Garellano (2025) Arup: Análisis CFD para la determinación de cargas de viento en fachada en edificación de gran altura.
 }
 
-\paragraph{Computational Design \& BIM Automation (R\&D)}
+\subsection{Computational Design \& BIM Automation (R\&D)}
 
 \parbox{\linewidth}{
-    Head of Development & Innovation (2022-2025) SOCOTEC Spain \newline
-    Automatización: Desarrollo de algoritmos propios (C# / .NET / Python) para la interoperabilidad directa entre modelos de cálculo y software BIM (Revit/Robot), eliminando el retrabajo manual.
+    Head of Development \& Innovation (2022-2025) SOCOTEC Spain - Buildings \& cities \newline
+    Automatización: Desarrollo de algoritmos propios (C\# / .NET / Python) para la interoperabilidad directa entre modelos de cálculo y software BIM (Revit/Robot), eliminando el retrabajo manual.
 }
 
 \parbox{\linewidth}{
-    Consultor externo (2024 - 2025) Hromipresa \newline
+    Consultor externo (2024 - 2025) Hormipresa \newline
     Control de Calidad: Implementación de procesos automatizados para la revisión de conjuntos de izado en prefabricados, optimizando la seguridad y reduciendo tiempos de revisión técnica.
 }
 
